--- a/fo_oldal.html
+++ b/fo_oldal.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minecraft</title>
+    <link rel="stylesheet" href="fo_oldal.css">
+    <title>Project Minecraft</title>
+    <header>
+        <div id="Logo">
+            <img src="project_minecraft.png" alt="Logo">
+        </div>
+        <nav>
+
+        </nav>
+    </header>
 </head>
+
+
 <body>
     
+
+
+
+
+
+
+
+
+
+
+
+    <footer>
+
+    </footer>
 </body>
 </html>
