--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="fo_oldal.css">
     <title>Project Minecraft</title>
     <header>
-        <div id="Logo">
+        <div class="Logo">
             <img src="project_minecraft.png" alt="Logo">
         </div>
         <nav>
