--- a/index.html
+++ b/index.html
@@ -1,35 +1,20 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="fo_oldal.css">
-    <title>Project Minecraft</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Project Minecraft</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 
-
 <body>
-    <header>
-        <div class="Logo">
-            <img src="project_minecraft.png" alt="Logo">
-        </div>
-        <nav>
+  <header>
+    <img src="project_minecraft.png" alt="Logo" class="logo" />
+  </header>
 
-        </nav>
-    </header>
+  <main>
+    
+  </main>
 
-
-
-
-
-
-
-
-
-
-
-    <footer>
-
-    </footer>
 </body>
 </html>
