--- a/index.html
+++ b/index.html
@@ -1,20 +1,74 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>Project Minecraft</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="index.css">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
-
 <body>
+
+
+
   <header>
-    <img src="project_minecraft.png" alt="Logo" class="logo" />
+    <img src="project_minecraft2.png" class="logo" alt="Logo">
+    <h1><strong>Minecraft Végigjátszás Kezdőknek</strong></h1>
+    <button id="my-button">
+        <img src="flint_and_steel!.jpg" alt="Play">
+    </button>
+    <nav>
+
+    </nav>
   </header>
 
+
   <main>
-    
+    <hr>
+
+    <img id="image-to-hide" src="creeper_oh_maaaan.jpg" alt="Creeper">
+
+    <div id="video-container"></div>
+
+    <script>
+        document.getElementById("my-button").addEventListener("click", function () {
+
+        document.getElementById("image-to-hide").style.display = "none";
+
+
+        document.getElementById("video-container").innerHTML = `
+            <iframe width="560" height="315"
+            src="https://www.youtube.com/watch?v=jn4xFdPpMUg?autoplay=1&rel=0"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+            </iframe>
+        `;
+        document.getElementById("video-container").style.display = "block";
+        });
+    </script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <hr>
   </main>
 
+  <footer>
+    <p>Logó készítéséhez haznált oldalak:</p>
+    <a href="https://www.design.com" target="_blank">Design</a>
+    <a href="https://www.remove.bg" target="_blank">RemoveBG</a>
+  </footer>
 </body>
 </html>
