--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             referrerpolicy="strict-origin-when-cross-origin"
             allowfullscreen>
           </iframe>
-        
+    </script>
 
     <hr>
     <section class="bal_margo">
