--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <header>
     <img src="project_minecraft2.png" class="logo" alt="Logo">
-    <h1><strong>Minecraft Végigjátszás Kezdőknek</strong></h1>
+    <h1><strong style="color: white">Minecraft Végigjátszás Kezdőknek</strong></h1>
     <button id="my-button">
         <img src="flint_and_steel!.jpg" alt="Play">
     </button>
