--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <h2><strong><u style="size: 15px;">Tartalomjegyzék:</u></strong></h2>
         <ul>
             <li><a href="#iranyitas">Irányítás</a></li>
-            <li><a href=""></a></li>
+            <li><a href="#barkacsolas"></a>Barkácsolás</li>
             <li><a href=""></a></li>
         </ul>
     </section>
@@ -114,6 +114,8 @@
                 <td>blockok letétele, interakció, armor gyors felvétele/cseréje</td></tr>
             <tr><td><span class="key">T</span></td>
                 <td>chat megnyitása <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwi-pcCJn6uNAxUV-LsIHShaN38QwqsBegQIGRAG&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D0BVC4pexRnA&usg=AOvVaw0LfQr-4z70ENRmnqiqY6le&opi=89978449" target="_blank">(commandok)</a></td></tr>
+            <tr><td><span class="key">Bal click</span></td>
+                <td>Blockok törése, sebzés</td>
         </table>
 
         <table class="controls-table">
@@ -135,6 +137,9 @@
         <tr><td><span class="key">Ctrl+W</span></td>
             <td>futás (csak ameddig a hungerbar nincs 4 alatt)</td></tr>
         </table>
+
+    <h2 style="color: white; padding-top: 25px;" id="barkacsolas">Barkácsolás</h2>
+
     </section>
 
 
