--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <h2><strong><u style="size: 15px;">Tartalomjegyzék:</u></strong></h2>
         <ul>
             <li><a href="#iranyitas">Irányítás</a></li>
-            <li><a href="#barkacsolas"></a>Barkácsolás</li>
+            <li><a href="#barkacsolas">Barkácsolás</a></li>
             <li><a href=""></a></li>
         </ul>
     </section>
@@ -138,7 +138,7 @@
             <td>futás (csak ameddig a hungerbar nincs 4 alatt)</td></tr>
         </table>
 
-    <h2 style="color: white; padding-top: 25px;" id="barkacsolas">Barkácsolás</h2>
+    <h2 style="color: white; padding-top: 25px;" id="barkacsolas">Barkácsolás:</h2>
 
     </section>
 
