--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <li style="padding-bottom: 15px;"><a href="#iranyitas">Irányítás</a></li>
             <li style="padding-bottom: 15px;"><a href="#inventory">Inventory</a></li>
             <li style="padding-bottom: 15px;"><a href="#crafting">Barkácsolás</a></li>
-            <li style="padding-bottom: 15px;"><a href="#anyagok"></a>Páncél/eszköz anyagok</li>
+            <li style="padding-bottom: 15px;"><a href="#materials">Páncél/eszköz anyagok</a></li>
         </ol>
     </section>
 
@@ -245,7 +245,7 @@
                         <li><strong><u><a href="https://minecraft.fandom.com/wiki/Smoker" target="_blank">Füstölő</a></u></strong>: Ez a kemence fajta csak a megsüthető ételeket tudja megsütni... mert egy füstölő, <br>
                             ahol nem érceket meg követ szoktunk füstölni..., de sokkal gyorsabban süti meg őket mint egy <br>
                             normális kemence.</li>
-                        <li id="anyagok"><strong><u><a href="https://minecraft.fandom.com/wiki/Blast_Furnace" target="_blank">Olvasztókemence</a></u></strong>: Az olvasztókemence csakis érceket tud kisütni rudakra, <br>
+                        <li id="materials"><strong><u><a href="https://minecraft.fandom.com/wiki/Blast_Furnace" target="_blank">Olvasztókemence</a></u></strong>: Az olvasztókemence csakis érceket tud kisütni rudakra, <br>
                             fém páncélokat rögökre (kivéve a lánc) és a netherite-ot netherite scrap-vé, de ez is sokkal <br>
                             gyorsabban csinálja ezt ,mint egy átlagos kemence.</li>
                     </ol> <br>
